app/assets/stylesheets/application.scss
@import "ecosystems";

html {
  scroll-behavior: smooth;
}

.text-decoration-hover{
  text-decoration: none;
  &:hover{
    text-decoration: underline;
  }
}

.stat{
  small{
    font-size: 0.7em;
  }
  .info{
    position: absolute;
    top:0;
    right: 5px;
    color: #ccc;
  }
}

.glossary {
  :target {
    background-color: $color-purple-transparent;
    padding: 1rem 1.75rem 0;
    scroll-margin-top: 4rem; 
    transition: background-color 0.3s;
    color: $color-purple-dark;
    margin-bottom: 0;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    & + p {
      background-color: $color-purple-transparent;
      border-bottom: 3px solid $color-purple;
      padding: 0.5rem 1.75rem 1.5rem;
      border-bottom-left-radius: 8px;
      border-bottom-right-radius: 8px;
    }
  }
}

.custom-switch-link {
  position: relative;
  display: inline-block;
  padding-right: 3em;
  text-decoration: none;
  color: $color-black;
  &:after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    width: 40px;
    height: 26px;
    background: linear-gradient(0, $color-grey 80%, darken($color-grey, 5%) 100%);
    border-radius: 24px; 
    transition: background-position .15s ease-in-out; 
    text-decoration: none; 

  }
  

  &:before {
    content: "";
    position: absolute;
    top: 3px;
    right: 3px;
    width: 20px;
    height: 20px;
    background-color: white;
    border-radius: 50%;
    transition: transform 0.15s ease-in-out;
    z-index: 100;
    transform: translateX(-14px);
    box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
  }

  &.active {
    &:after {
      background-color: $color-purple;
      background: linear-gradient(0, $color-purple 80%, $color-purple-dark 100%);
    }
    &:before {
      transform: translateX(0px);
    }
  }
}

.dashboard-home__hero {
  
  .container {
    padding-top: 3rem;
    padding-bottom: 6rem;
    background-image: asset-url('graph-go-up.svg');
 
      background-position-x: right;
      background-position-y: 30%;
      background-size: contain;
    background-repeat: no-repeat;


    @include media-breakpoint-up(md) {
      padding-bottom: 6rem;
      background-position-x: right;
      background-position-y: 30%;
      background-size: contain;
    }

    @include media-breakpoint-up(lg) {
      background-position-y: 10rem;
    }

    @include media-breakpoint-up(xl) {
    }
  }

  .display-1 {
    @include font-size(5.25rem);
    line-height: 1.05;
  }
}

.dashboard-home__hero__cta {
  margin-top: 6rem;
  @include media-breakpoint-up(md) {
    margin-top: 10rem;
  }

   @include media-breakpoint-up(lg) {
    margin-top: 14rem;
  } 
}

.dashboard-home__hero__para {
  max-width: 44ch;
}

.dashboard-home__benefits {
  h3 {
    max-width: 44ch;
    margin: 0 auto;
  }
}

.dashboard-home__howitworks {
  p {
    @include media-breakpoint-up(lg) {
      max-width: 32ch;
    }
  }
}

.dashboard-home__whywebuilt__img {
  max-width: 100%;
}

.dashboard-home__ecosystems-data {

  padding-bottom: 400px;
  padding-top: 3rem;

  background-image: asset-url('dashboard-screen.png');
  background-size: 426px 388px;
  background-repeat: no-repeat;

  background-position-x: 50%;
  background-position-y: 107%;

  @include media-breakpoint-up(md) {
    background-size: 852px 776px;
    background-position-y: -410%;
  }

  @include media-breakpoint-up(lg) {
    background-position-x: calc(50% + 520px);
    background-position-y: 4rem;
    padding-top: 5rem;
    padding-bottom: 5rem;
  }
}

